tdf#137883 sw: DOCX export: compatibilityMode=12 for ECMA 376 1st ed.

Commit f25985c55541cbbc9a4fc79e660592d3d0485196 changed the default to
15, but it appears that if we want an export filter "MS Word 2007 XML"
that writes the ECMA 376 1st edition markup that's not 100% compatible
with later versions, we should default to the corresponding
compatibilityMode 12 (Word 2007) if that filter is used.

Change-Id: Idd6e9be2c621aac954f313364249aae186318436
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147209
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>